$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.206 2005/08/22 10:49:04 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.53
-----------------

TK/01 Added the "success_on_redirect" address verification option. See
      NewStuff for rationale and an example.

PH/01 Added support for SQLite, basic code supplied by David Woodhouse.

PH/02 Patch to exigrep to allow it to work on syslog lines.

PH/03 When creating an mbox file for a virus/spam scan, use fseek() instead of
      fread() to skip over the body file's header line, because in Cygwin the
      header line is locked and is inaccessible.

PH/04 Added $message_exim_id, ultimately to replace $message_id (they will both
      co-exist for some time) to make it clear that it is the Exim ID that is
      referenced, not the Message-ID: header line.

PH/05 Replaced all Tom's calls to snprintf() with calls to the internal
      string_format() function, because snprintf() does not exist on all
      operating systems.

PH/06 The use of forbid_filter_existstest now also locks out the use of the
      ${stat: expansion item.

PH/07 Changed "SMTP protocol violation: synchronization error" into "SMTP
      protocol synchronization error", to keep the pedants happy.

PH/08 Arrange for USE_INET_NTOA_FIX to be set in config.h for AIX systems as
      well as for IRIX systems, when gcc is being used. See the host.c source
      file for comments.

PH/09 Installed latest Cygwin configuration files from the Cygwin maintainer.

PH/10 Named domain lists were not working if used in a queue_smtp_domains
      setting.

PH/11 Added support for the IGNOREQUOTA extension to LMTP, both to the lmtp
      transport and to the smtp transport in LMTP mode.

TK/02 Remove one case of BASE64 error detection FTTB (undocumented anyway).

PH/12 There was a missing call to search_tidyup() before the fork() in rda.c to