@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.63 2005/08/09 13:31:52 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.64 2005/08/22 14:01:37 ph10 Exp $
 
 New Features in Exim
 --------------------
@@ -101,6 +101,10 @@ PH/06 It is now possible to specify a port number along with a host name or
       must come last. For example:
 
            route_list = *  dom1.tld/mx::1225
+
+PH/07 $smtp_command_argument is now set for all SMTP commands, not just the
+      non-message ones. This makes it possible to inspect the complete command
+      for RCPT commands, for example.
 
 
 Exim version 4.52
